Minor renaming of actions in the command editor.

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -123,7 +123,7 @@ instead of directly in the lib (see highlightWatcher() below) -->
 <br clear="all"/>
 <div id="editor-actions">
   <div id="save-as-div" class="col-three">
-    <b><a href="javascript:void(saveAs())">Save</a> commands to file (and subscribe).</b>
+    <b><a href="javascript:void(saveAs())">Save</a> to file </b>
   </div>
   
   <div id="import-template-div" class="col-three">
@@ -139,7 +139,7 @@ instead of directly in the lib (see highlightWatcher() below) -->
   </div>
 
   <div id="paste-as-div" class="col-two">
-    <b><a href="javascript:void(paste())">Share your commands</a></b>
+    <b><a href="javascript:void(paste())">Share</a></b>
   </div>
 </div>
 
