--- a/ubiquity/scripts/codemirror/index.html
+++ b/ubiquity/scripts/codemirror/index.html
@@ -21,23 +21,26 @@
 relatively pleasant editor interface for code-like content -- computer
 programs, HTML markup, and similar. If a parser has been written for
 the language you are editing (we currently have <a
-href="jstest.html">JavaScript</a>, <a href="htmltest.html">XML</a>,
-and <a href="csstest.html">CSS</a> covered), the code will be prettily
-coloured, and indentation will be taken care of for you, meaning the
-cursor will be placed at the right position when you press enter, and
-it is possible to re-indent blocks of code automatically.</p>
+href="jstest.html">JavaScript</a>, <a href="htmltest.html">XML</a>, <a
+href="csstest.html">CSS</a>, and <a href="sparqltest.html">SPARQL</a>
+covered), the code will be prettily coloured, and indentation will be
+taken care of for you, meaning the cursor will be placed at the right
+position when you press enter, and it is possible to re-indent blocks
+of code automatically.</p>
 
 <p>The program has, so far, been integrated in my <a
 href="http://eloquentjavascript.net">interactive book</a> on
-JavaScript and several few small sites. Though I can not guarantee
-that it works in all situations on all <a
+JavaScript, several small sites, and a <a
+href="http://code.google.com/p/rainbow4firebug/">Firebug add-on</a>.
+Though I can not guarantee that it works in all situations on all <a
 href="#supported">supported</a> browsers, it has proven itself quite
 stable and usable.</p>
 
 <p>To get a look at CodeMirror, see the <strong>demonstration
 pages</strong> for the <a href="jstest.html">JavaScript</a>, <a
-href="htmltest.html">XML/HTML</a>, and <a href="csstest.html">CSS</a>
-parsers.</p>
+href="htmltest.html">XML/HTML</a>, <a href="csstest.html">CSS</a>, and
+<a href="sparqltest.html">SPARQL</a>, and <a
+href="mixedtest.html">HTML mixed-mode</a> parsers.</p>
 
 <h2>Releases</h2>
 
@@ -97,7 +100,6 @@ The very first numbered release.</p>
   <li>Firefox 1.5 or higher</li>
   <li>Internet Explorer 6 or higher</li>
   <li>Safari 3 or higher</li>
-  <li>Opera 9.5 or higher (a bit slow and glitchy, though)</li>
 </ul>
 
 <p>Making it work on other browsers that have decent support for the
@@ -126,7 +128,7 @@ darcsweb</a></p>
 <h2>Support</h2>
 
 <p>There is a <a
-href="http://groups.google.nl/group/codemirror">Google group</a> (a
+href="http://groups.google.com/group/codemirror">Google group</a> (a
 sort of mailing list/newsgroup thingy) for discussion and news related
 to CodeMirror. You can also e-mail me directly: <a
 href="mailto:marijnh@gmail.com">Marijn Haverbeke</a>.</p>
